@@ -1,4 +1,6 @@
 1.1.3
+ * (JMX) rename getRangeKeySample to sampleKeyRange to avoid returning
+   multi-MB results as an attribute (CASSANDRA-4452)
  * flush based on data size, not throughput; overwritten columns no 
    longer artificially inflate liveRatio (CASSANDRA-4399)
  * update default commitlog segment size to 32MB and total commitlog
